[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmc-csci040-ryanKim"
version = "0.1.2"
requires-python = ">=3.11"
description = "A pirate-themed LLM chat REPL powered by Groq."
dependencies = [
    "groq",
    "python-dotenv",
]

[project.scripts]
chat = "chat:repl"

[tool.hatch.build.targets.wheel]
include = ["chat.py"]