[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmc-csci040-ryanKim"
version = "0.1.5"
requires-python = ">=3.10"
description = "A pirate-themed LLM chat REPL powered by Groq."
readme = "README.md"
dependencies = [
    "groq",
    "python-dotenv",
]

[project.scripts]
chat = "chat:repl"

[tool.hatch.build.targets.wheel]
include = ["chat.py", "tools/"]

[tool.pytest.ini_options]
addopts = "--ignore=testProjects"