[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmc-csci040-ryanKim"
version = "0.1.6"
requires-python = ">=3.10"
description = "LLM chat with file change integration by Groq"
readme = "README.md"
dependencies = [
    "groq",
    "python-dotenv",
    "gitpython"
]

[project.scripts]
chat = "chat:repl"

[tool.hatch.build.targets.wheel]
include = ["chat.py", "tools/"]

[tool.pytest.ini_options]
addopts = "--ignore=testProjects"